--- a/index.html
+++ b/index.html
@@ -95,7 +95,15 @@
       <address>
         <ul>
           <!-- google map link-->
-          <li><a href=""> г. Киев, пр-т Леси Украинки, 26 </a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/namVYLT5pjn7duQN9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
