--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,112 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Portfolio</title>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<nav>
+				<a href="./index.html">WebStudio</a>
+				<ul>
+					<li><a href="">Студия</a></li>
+					<li><a href="">Портфолио</a></li>
+					<li><a href="">Контакты</a></li>
+				</ul>
+			</nav>
+			<ul>
+				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			</ul>
+		</header>
+
+		<section>
+			<h2>Портфолио</h2>
+			<ul>
+				<li><button>Все</button></li>
+				<li><button>Веб-сайты</button></li>
+				<li><button>Приложения</button></li>
+				<li><button>Дизайн</button></li>
+				<li><button>Маркетинг</button></li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="./img/portfolio-img-1.jpg" alt="Ноутбука с открытым сайтом компании" width="370" /></a>
+					<h3>Технокряк</h3>
+					<p>Веб-сайт</p>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="/img/portfolio-img-2.jpg" alt="Постер баскетбольного матча" width="370" /></a>
+					<h3>Постер New Orlean vs Golden Star</h3>
+					<p>Дизайн</p>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="./img/portfolio-img-3.jpg" alt="Логотип ресторана" width="370" /></a>
+					<h3>Ресторан Seafood</h3>
+					<p>Приложение</p>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="./img/portfolio-img-4.jpg" alt="Наушники закрытого типа" width="370" /></a>
+					<h3>Проект Prime</h3>
+					<p>Маркетинг</p>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="./img/portfolio-img-5.jpg" alt="Подарочные коробки" width="370" /></a>
+					<h3>Проект Boxes</h3>
+					<p>Приложение</p>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="./img/portfolio-img-6.jpg" alt="Монитор с открытым сайтом компании" width="370" /></a>
+					<h3>Inspiration has no Borders</h3>
+					<p>Веб-сайт</p>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="./img/portfolio-img-7.jpg" alt="Разворот журнала" width="370" /></a>
+					<h3>Издание Limited Edition</h3>
+					<p>Дизайн</p>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="./img/portfolio-img-8.jpg" alt="Элегантная белая этикетка" width="370" /></a>
+					<h3>Проект LAB</h3>
+					<p>Маркетинг</p>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<a href=""><img src="./img/portfolio-img-9.jpg" alt="Открытое приложение на ноутбуке" width="370" /></a>
+					<h3>Growing Business</h3>
+					<p>Приложение</p>
+				</li>
+			</ul>
+		</section>
+
+		<footer>
+			<a href="./index.html">WebStudio</a>
+			<address>
+				<ul>
+					<!-- google map link-->
+					<li>
+						<a href="https://goo.gl/maps/namVYLT5pjn7duQN9" target="_blank" rel="noopener noreferrer nofollow">
+							г. Киев, пр-т Леси Украинки, 26
+						</a>
+					</li>
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				</ul>
+			</address>
+		</footer>
+	</body>
 </html>
