--- a/index.html
+++ b/index.html
@@ -1,119 +1,135 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>WebStudio</title>
-	</head>
-	<body>
-		<!-- Header -->
-		<header>
-			<nav>
-				<a href="./index.html">WebStudio</a>
-				<ul>
-					<li><a href="">Студия</a></li>
-					<li><a href="">Портфолио</a></li>
-					<li><a href="">Контакты</a></li>
-				</ul>
-			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-			</ul>
-		</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
 
-		<main>
-			<!-- Hero section-->
-			<section class="section hero-section">
-				<h1>Эффективные решения для вашего бизнеса</h1>
-				<button type="button">Заказать услугу</button>
-			</section>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <!--================ HEADER ==========-->
+    <header class="header">
+      <nav class="header-nav">
+        <!-- prettier-ignore -->
+        <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+        <ul class="header-nav-list list">
+          <li class="header-nav-item"><a class="header-nav-link link current" href="./index.html">Студия</a></li>
+          <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Портфолио</a></li>
+          <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="header-contacts-list list">
+        <li class="header-contacts-item">
+          <a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="header-contacts-item">
+          <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
 
-			<!-- Features section-->
-			<section class="section">
-				<h2 class="features-heading">Особенности</h2>
-				<ul class="features-list">
-					<li class="features-iteam">
-						<h3 class="features-title">Внимание к деталям</h3>
-						<p class="features-description">
-							Идейные соображения, а также начало повседневной работы по формированию позиции.
-						</p>
-					</li>
-					<li class="features-iteam">
-						<h3 class="features-title">Пунктуальность</h3>
-						<p class="features-description">
-							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-						</p>
-					</li>
-					<li class="features-iteam">
-						<h3 class="features-title">Планирование</h3>
-						<p class="features-description">
-							Равным образом консультация с широким активом в значительной степени обуславливает.
-						</p>
-					</li>
-					<li class="features-iteam">
-						<h3 class="features-title">Современные технологии</h3>
-						<p class="features-description">
-							Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-						</p>
-					</li>
-				</ul>
-			</section>
-
-			<!-- What we do section -->
-			<section class="section">
-				<h2 class="service">Чем мы занимаемся</h2>
-				<ul>
-					<li><img src="./img/what-we-do-1.jpg" alt="Програмирование" width="370" /></li>
-					<li><img src="./img/what-we-do-2.jpg" alt="Адаптивная верстка" width="370" /></li>
-					<li><img src="./img/what-we-do-3.jpg" alt="Дизайн" width="370" /></li>
-				</ul>
-			</section>
-
-			<!-- Our team section -->
-			<section class="section">
-				<h2>Наша команда</h2>
-				<ul>
-					<li>
-						<img src="./img/teammate1.jpg" alt="Фото Игоря Демьяненко" width="270" />
-						<h3>Игорь Демьяненко</h3>
-						<p>Product Designer</p>
-					</li>
-					<li>
-						<img src="./img/teammate2.jpg" alt="Фото Ольги Репиной" width="270" />
-						<h3>Ольга Репина</h3>
-						<p>Frontend Developer</p>
-					</li>
-					<li>
-						<img src="./img/teammate3.jpg" alt="Фото Николая Тарасова" width="270" />
-						<h3>Николай Тарасов</h3>
-						<p>Marketing</p>
-					</li>
-					<li>
-						<img src="./img/teammate4.jpg" alt="Фото Михаила Ермакова" width="270" />
-						<h3>Михаил Ермаков</h3>
-						<p>UI Designer</p>
-					</li>
-				</ul>
-			</section>
-		</main>
-
-		<!-- Footer -->
-		<footer>
-			<a href="./index.html">WebStudio</a>
-			<address>
-				<ul>
-					<!-- google map link-->
-					<li>
-						<a href="https://goo.gl/maps/namVYLT5pjn7duQN9" target="_blank" rel="noopener noreferrer nofollow">
-							г. Киев, пр-т Леси Украинки, 26
-						</a>
-					</li>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-				</ul>
-			</address>
-		</footer>
-	</body>
+    <main>
+      <!--========== HERO SECTION ==========-->
+      <section class="hero-section section">
+        <h1 class="hero-heading">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-btn" type="button">Заказать услугу</button>
+      </section>
+      <!--========== FEATURES SECTION ==========-->
+      <section class="features-section section">
+        <h2 class="features-heading">Особенности</h2>
+        <ul class="features-list list">
+          <li class="features-item">
+            <h3 class="features-title">Внимание к деталям</h3>
+            <p class="features-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Пунктуальность</h3>
+            <p class="features-text">
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Планирование</h3>
+            <p class="features-text">
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Современные технологии</h3>
+            <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+      <!--========== SERVICE SECTION ==========-->
+      <section class="service-section section">
+        <h2 class="service-heading">Чем мы занимаемся</h2>
+        <ul class="service-list list">
+          <li class="service-item"><img src="./img/what-we-do-1.jpg" alt="Програмирование" width="370" /></li>
+          <li class="service-item"><img src="./img/what-we-do-2.jpg" alt="Адаптивная верстка" width="370" /></li>
+          <li class="service-item"><img src="./img/what-we-do-3.jpg" alt="Дизайн" width="370" /></li>
+        </ul>
+      </section>
+      <!--========== OUR TEAM SECTION ==========-->
+      <section class="team-section section">
+        <h2 class="team-heading">Наша команда</h2>
+        <ul class="teammate-list list">
+          <li class="teammate-item">
+            <img src="./img/teammate1.jpg" alt="Фото Игоря Демьяненко" width="270" />
+            <h3 class="teammate-name">Игорь Демьяненко</h3>
+            <p class="teammate-text" lang="en">Product Designer</p>
+          </li>
+          <li class="teammate-item">
+            <img src="./img/teammate2.jpg" alt="Фото Ольги Репиной" width="270" />
+            <h3 class="teammate-name">Ольга Репина</h3>
+            <p class="teammate-text" lang="en">Frontend Developer</p>
+          </li>
+          <li class="teammate-item">
+            <img src="./img/teammate3.jpg" alt="Фото Николая Тарасова" width="270" />
+            <h3 class="teammate-name">Николай Тарасов</h3>
+            <p class="teammate-text" lang="en">Marketing</p>
+          </li>
+          <li class="teammate-item">
+            <img src="./img/teammate4.jpg" alt="Фото Михаила Ермакова" width="270" />
+            <h3 class="teammate-name">Михаил Ермаков</h3>
+            <p class="teammate-text" lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!--================= FOOTER ==========-->
+    <footer class="footer">
+      <!-- prettier-ignore -->
+      <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+      <address class="footer-contacts">
+        <ul class="footer-contacts-list list">
+          <li class="footer-contacts-item">
+            <a
+              class="footer-contacts-link address link"
+              href="https://goo.gl/maps/namVYLT5pjn7duQN9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li class="footer-contacts-item">
+            <a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="footer-contacts-item">
+            <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
