--- a/portfolio.html
+++ b/portfolio.html
@@ -1,115 +1,142 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Portfolio</title>
-	</head>
-	<body>
-		<header>
-			<nav>
-				<a href="./index.html">WebStudio</a>
-				<ul>
-					<li><a href="">Студия</a></li>
-					<li><a href="">Портфолио</a></li>
-					<li><a href="">Контакты</a></li>
-				</ul>
-			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-			</ul>
-		</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-		<section>
-			<h2>Портфолио</h2>
-			<ul>
-				<li><button>Все</button></li>
-				<li><button>Веб-сайты</button></li>
-				<li><button>Приложения</button></li>
-				<li><button>Дизайн</button></li>
-				<li><button>Маркетинг</button></li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="./img/portfolio-img-1.jpg" alt="Ноутбука с открытым сайтом компании" width="370" /></a>
-					<h3>Технокряк</h3>
-					<p>Веб-сайт</p>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="/img/portfolio-img-2.jpg" alt="Постер баскетбольного матча" width="370" /></a>
-					<h3>Постер New Orlean vs Golden Star</h3>
-					<p>Дизайн</p>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="./img/portfolio-img-3.jpg" alt="Логотип ресторана" width="370" /></a>
-					<h3>Ресторан Seafood</h3>
-					<p>Приложение</p>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="./img/portfolio-img-4.jpg" alt="Наушники закрытого типа" width="370" /></a>
-					<h3>Проект Prime</h3>
-					<p>Маркетинг</p>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="./img/portfolio-img-5.jpg" alt="Подарочные коробки" width="370" /></a>
-					<h3>Проект Boxes</h3>
-					<p>Приложение</p>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="./img/portfolio-img-6.jpg" alt="Монитор с открытым сайтом компании" width="370" /></a>
-					<h3>Inspiration has no Borders</h3>
-					<p>Веб-сайт</p>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="./img/portfolio-img-7.jpg" alt="Разворот журнала" width="370" /></a>
-					<h3>Издание Limited Edition</h3>
-					<p>Дизайн</p>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="./img/portfolio-img-8.jpg" alt="Элегантная белая этикетка" width="370" /></a>
-					<h3>Проект LAB</h3>
-					<p>Маркетинг</p>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href=""><img src="./img/portfolio-img-9.jpg" alt="Открытое приложение на ноутбуке" width="370" /></a>
-					<h3>Growing Business</h3>
-					<p>Приложение</p>
-				</li>
-			</ul>
-		</section>
-
-		<footer>
-			<a href="./index.html">WebStudio</a>
-			<address>
-				<ul>
-					<!-- google map link-->
-					<li>
-						<a href="https://goo.gl/maps/namVYLT5pjn7duQN9" target="_blank" rel="noopener noreferrer nofollow">
-							г. Киев, пр-т Леси Украинки, 26
-						</a>
-					</li>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-				</ul>
-			</address>
-		</footer>
-	</body>
+  <body>
+    <!-- ============= HEADER ========== -->
+    <header class="header">
+      <nav class="header-nav">
+        <!-- prettier-ignore -->
+        <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+        <ul class="header-nav-list list">
+          <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Студия</a></li>
+          <li class="header-nav-item"><a class="header-nav-link link current" href="./portfolio.html">Портфолио</a></li>
+          <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="header-contacts-list list">
+        <li class="header-contacts-item">
+          <a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="header-contacts-item">
+          <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+    <!-- ========== PORTFOLIO SECTION ========== -->
+    <section class="portfolio-section section">
+      <h1 class="portfolio-heading">Портфолио</h1>
+      <!-- ======= PORTFOLIO FILTERS ========== -->
+      <ul class="portfolio-filter-list list">
+        <li class="filter-item"><button class="filter-btn" type="button">Все</button></li>
+        <li class="filter-item"><button class="filter-btn" type="button">Веб-сайты</button></li>
+        <li class="filter-item"><button class="filter-btn" type="button">Приложения</button></li>
+        <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
+        <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
+      </ul>
+      <!-- ======= PORTFOLIO PROJECTS ========== -->
+      <ul class="portfolio-list list">
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="./img/portfolio-img-1.jpg" alt="Ноутбука с открытым сайтом компании" width="370" />
+            <h2 class="portfolio-name">Технокряк</h2>
+            <p class="portfolio-type">Веб-сайт</p>
+          </a>
+        </li>
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="/img/portfolio-img-2.jpg" alt="Постер баскетбольного матча" width="370" />
+            <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
+            <p class="portfolio-type">Дизайн</p>
+          </a>
+        </li>
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="./img/portfolio-img-3.jpg" alt="Логотип ресторана" width="370" />
+            <h2 class="portfolio-name">Ресторан Seafood</h2>
+            <p class="portfolio-type">Приложение</p>
+          </a>
+        </li>
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="./img/portfolio-img-4.jpg" alt="Наушники закрытого типа" width="370" />
+            <h2 class="portfolio-name">Проект Prime</h2>
+            <p class="portfolio-type">Маркетинг</p>
+          </a>
+        </li>
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="./img/portfolio-img-5.jpg" alt="Подарочные коробки" width="370" />
+            <h2 class="portfolio-name">Проект Boxes</h2>
+            <p class="portfolio-type">Приложение</p>
+          </a>
+        </li>
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="./img/portfolio-img-6.jpg" alt="Монитор с открытым сайтом компании" width="370" />
+            <h2 class="portfolio-name">Inspiration has no Borders</h2>
+            <p class="portfolio-type">Веб-сайт</p>
+          </a>
+        </li>
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="./img/portfolio-img-7.jpg" alt="Разворот журнала" width="370" />
+            <h2 class="portfolio-name">Издание Limited Edition</h2>
+            <p class="portfolio-type">Дизайн</p>
+          </a>
+        </li>
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="./img/portfolio-img-8.jpg" alt="Элегантная белая этикетка" width="370" />
+            <h2 class="portfolio-name">Проект LAB</h2>
+            <p class="portfolio-type">Маркетинг</p>
+          </a>
+        </li>
+        <li class="portfolio-item">
+          <a class="portfolio-link link" href="">
+            <img src="./img/portfolio-img-9.jpg" alt="Открытое приложение на ноутбуке" width="370" />
+            <h2 class="portfolio-name">Growing Business</h2>
+            <p class="portfolio-type">Приложение</p>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <!-- ============= FOOTER ========== -->
+    <footer class="footer">
+      <!-- prettier-ignore -->
+      <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+      <address class="footer-contacts">
+        <ul class="footer-contacts-list list">
+          <li class="footer-contacts-item">
+            <a
+              class="footer-contacts-link address link"
+              href="https://goo.gl/maps/namVYLT5pjn7duQN9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li class="footer-contacts-item">
+            <a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="footer-contacts-item">
+            <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
