--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     </header>
     <!-- ========== PORTFOLIO SECTION ========== -->
     <section class="portfolio-section section">
-      <h1 class="portfolio-heading">Портфолио</h1>
+      <h1 class="portfolio-heading visually-hidden">Портфолио</h1>
       <!-- ======= PORTFOLIO FILTERS ========== -->
       <ul class="portfolio-filter-list list">
         <li class="filter-item"><button class="filter-btn" type="button">Все</button></li>
