--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </section>
       <!--========== FEATURES SECTION ==========-->
       <section class="features-section section">
-        <h2 class="features-heading">Особенности</h2>
+        <h2 class="features-heading visually-hidden">Особенности</h2>
         <ul class="features-list list">
           <li class="features-item">
             <h3 class="features-title">Внимание к деталям</h3>
