--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         </li>
         <li class="portfolio-item">
           <a class="portfolio-link link" href="">
-            <img src="/img/portfolio-img-2.jpg" alt="Постер баскетбольного матча" width="370" />
+            <img src="./img/portfolio-img-2.jpg" alt="Постер баскетбольного матча" width="370" />
             <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-type">Дизайн</p>
           </a>
