--- a/index.html
+++ b/index.html
@@ -12,124 +12,143 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--================ HEADER ==========-->
     <header class="header">
-      <nav class="header-nav">
-        <!-- prettier-ignore -->
-        <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
-        <ul class="header-nav-list list">
-          <li class="header-nav-item"><a class="header-nav-link link current" href="./index.html">Студия</a></li>
-          <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Портфолио</a></li>
-          <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
+      <div class="container contacts-container">
+        <nav class="header-nav">
+          <!-- prettier-ignore -->
+          <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+          <ul class="header-nav-list list">
+            <li class="header-nav-item"><a class="header-nav-link link current" href="./index.html">Студия</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Портфолио</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts-list list">
+          <li class="header-contacts-item">
+            <a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="header-contacts-item">
+            <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="header-contacts-list list">
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <!--========== HERO SECTION ==========-->
       <section class="hero-section section">
-        <h1 class="hero-heading">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-heading">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn" type="button">Заказать услугу</button>
+        </div>
       </section>
       <!--========== FEATURES SECTION ==========-->
       <section class="features-section section">
-        <h2 class="features-heading visually-hidden">Особенности</h2>
-        <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="features-title">Внимание к деталям</h3>
-            <p class="features-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Пунктуальность</h3>
-            <p class="features-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Планирование</h3>
-            <p class="features-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Современные технологии</h3>
-            <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="features-heading visually-hidden">Особенности</h2>
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="features-title">Внимание к деталям</h3>
+              <p class="features-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Пунктуальность</h3>
+              <p class="features-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Планирование</h3>
+              <p class="features-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Современные технологии</h3>
+              <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--========== SERVICE SECTION ==========-->
       <section class="service-section section">
-        <h2 class="service-heading">Чем мы занимаемся</h2>
-        <ul class="service-list list">
-          <li class="service-item"><img src="./img/what-we-do-1.jpg" alt="Програмирование" width="370" /></li>
-          <li class="service-item"><img src="./img/what-we-do-2.jpg" alt="Адаптивная верстка" width="370" /></li>
-          <li class="service-item"><img src="./img/what-we-do-3.jpg" alt="Дизайн" width="370" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="service-heading">Чем мы занимаемся</h2>
+          <ul class="service-list list">
+            <li class="service-item"><img src="./img/what-we-do-1.jpg" alt="Програмирование" width="370" /></li>
+            <li class="service-item"><img src="./img/what-we-do-2.jpg" alt="Адаптивная верстка" width="370" /></li>
+            <li class="service-item"><img src="./img/what-we-do-3.jpg" alt="Дизайн" width="370" /></li>
+          </ul>
+        </div>
       </section>
       <!--========== OUR TEAM SECTION ==========-->
       <section class="team-section section">
-        <h2 class="team-heading">Наша команда</h2>
-        <ul class="teammate-list list">
-          <li class="teammate-item">
-            <img src="./img/teammate1.jpg" alt="Фото Игоря Демьяненко" width="270" />
-            <h3 class="teammate-name">Игорь Демьяненко</h3>
-            <p class="teammate-text" lang="en">Product Designer</p>
-          </li>
-          <li class="teammate-item">
-            <img src="./img/teammate2.jpg" alt="Фото Ольги Репиной" width="270" />
-            <h3 class="teammate-name">Ольга Репина</h3>
-            <p class="teammate-text" lang="en">Frontend Developer</p>
-          </li>
-          <li class="teammate-item">
-            <img src="./img/teammate3.jpg" alt="Фото Николая Тарасова" width="270" />
-            <h3 class="teammate-name">Николай Тарасов</h3>
-            <p class="teammate-text" lang="en">Marketing</p>
-          </li>
-          <li class="teammate-item">
-            <img src="./img/teammate4.jpg" alt="Фото Михаила Ермакова" width="270" />
-            <h3 class="teammate-name">Михаил Ермаков</h3>
-            <p class="teammate-text" lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-heading">Наша команда</h2>
+          <ul class="teammate-list list">
+            <li class="teammate-item">
+              <img src="./img/teammate1.jpg" alt="Фото Игоря Демьяненко" width="270" />
+              <h3 class="teammate-name">Игорь Демьяненко</h3>
+              <p class="teammate-text" lang="en">Product Designer</p>
+            </li>
+            <li class="teammate-item">
+              <img src="./img/teammate2.jpg" alt="Фото Ольги Репиной" width="270" />
+              <h3 class="teammate-name">Ольга Репина</h3>
+              <p class="teammate-text" lang="en">Frontend Developer</p>
+            </li>
+            <li class="teammate-item">
+              <img src="./img/teammate3.jpg" alt="Фото Николая Тарасова" width="270" />
+              <h3 class="teammate-name">Николай Тарасов</h3>
+              <p class="teammate-text" lang="en">Marketing</p>
+            </li>
+            <li class="teammate-item">
+              <img src="./img/teammate4.jpg" alt="Фото Михаила Ермакова" width="270" />
+              <h3 class="teammate-name">Михаил Ермаков</h3>
+              <p class="teammate-text" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--================= FOOTER ==========-->
     <footer class="footer">
-      <!-- prettier-ignore -->
-      <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
-      <address class="footer-contacts">
-        <ul class="footer-contacts-list list">
-          <li class="footer-contacts-item">
-            <a
-              class="footer-contacts-link address link"
-              href="https://goo.gl/maps/namVYLT5pjn7duQN9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              г. Киев, пр-т Леси Украинки, 26
-            </a>
-          </li>
-          <li class="footer-contacts-item">
-            <a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="footer-contacts-item">
-            <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <!-- prettier-ignore -->
+        <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+        <address class="footer-contacts">
+          <ul class="footer-contacts-list list">
+            <li class="footer-contacts-item">
+              <a
+                class="footer-contacts-link address link"
+                href="https://goo.gl/maps/namVYLT5pjn7duQN9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                г. Киев, пр-т Леси Украинки, 26
+              </a>
+            </li>
+            <li class="footer-contacts-item">
+              <a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="footer-contacts-item">
+              <a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
