Changes to be committed: 	modified:   css/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
       <!--========== HERO SECTION ==========-->
-      <section class="hero-section section">
+      <section class="hero-section">
         <div class="container">
           <h1 class="hero-heading">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-btn" type="button">Заказать услугу</button>
@@ -101,23 +101,31 @@
           <ul class="teammate-list list">
             <li class="teammate-item">
               <img src="./img/teammate1.jpg" alt="Фото Игоря Демьяненко" width="270" />
-              <h3 class="teammate-name">Игорь Демьяненко</h3>
-              <p class="teammate-text" lang="en">Product Designer</p>
+              <div class="teammate-content">
+                <h3 class="teammate-name">Игорь Демьяненко</h3>
+                <p class="teammate-text" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="teammate-item">
               <img src="./img/teammate2.jpg" alt="Фото Ольги Репиной" width="270" />
-              <h3 class="teammate-name">Ольга Репина</h3>
-              <p class="teammate-text" lang="en">Frontend Developer</p>
+              <div class="teammate-content">
+                <h3 class="teammate-name">Ольга Репина</h3>
+                <p class="teammate-text" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="teammate-item">
               <img src="./img/teammate3.jpg" alt="Фото Николая Тарасова" width="270" />
-              <h3 class="teammate-name">Николай Тарасов</h3>
-              <p class="teammate-text" lang="en">Marketing</p>
+              <div class="teammate-content">
+                <h3 class="teammate-name">Николай Тарасов</h3>
+                <p class="teammate-text" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="teammate-item">
               <img src="./img/teammate4.jpg" alt="Фото Михаила Ермакова" width="270" />
-              <h3 class="teammate-name">Михаил Ермаков</h3>
-              <p class="teammate-text" lang="en">UI Designer</p>
+              <div class="teammate-content">
+                <h3 class="teammate-name">Михаил Ермаков</h3>
+                <p class="teammate-text" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
