--- a/index.html
+++ b/index.html
@@ -67,18 +67,38 @@
           <h2 class="features-heading visually-hidden">Особливості</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="features-icon-wrap">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./img/sprite.svg#features-1-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrap">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./img/sprite.svg#features-2-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrap">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./img/sprite.svg#features-3-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">ПЛАНУВАННЯ</h3>
               <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrap">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./img/sprite.svg#features-4-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
