Changes to be committed: 	modified:   css/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -110,9 +110,24 @@
         <div class="container">
           <h2 class="service-heading section-heading">Чим ми займаємося</h2>
           <ul class="service-list list">
-            <li class="service-item"><img src="./img/what-we-do-1.jpg" alt="Програмування" width="370" /></li>
-            <li class="service-item"><img src="./img/what-we-do-2.jpg" alt="Адаптивна верстка" width="370" /></li>
-            <li class="service-item"><img src="./img/what-we-do-3.jpg" alt="Дизайн" width="370" /></li>
+            <li class="service-item">
+              <div class="img-box">
+                <img src="./img/what-we-do-1.jpg" alt="Програмування" width="370" />
+                <p class="service-text">Десктопні додатки</p>
+              </div>
+            </li>
+            <li class="service-item">
+              <div class="img-box">
+                <img src="./img/what-we-do-2.jpg" alt="Адаптивна верстка" width="370" />
+                <p class="service-text">Мобільні додатки</p>
+              </div>
+            </li>
+            <li class="service-item">
+              <div class="img-box">
+                <img src="./img/what-we-do-3.jpg" alt="Дизайн" width="370" />
+                <p class="service-text">Дизайнерські рішення</p>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
