--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -28,7 +30,7 @@
       <div class="container contacts-container">
         <nav class="header-nav">
           <!-- prettier-ignore -->
-          <a class="logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+          <a class="logo link animate__animated animate__bounce" lang="en" href="./index.html"><span>Web</span>Studio</a>
           <ul class="header-nav-list list">
             <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Студія</a></li>
             <li class="header-nav-item">
@@ -71,7 +73,13 @@
         <ul class="portfolio-list list">
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-1.jpg" alt="Ноутбук з відкритим сайтом компанії" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-1.jpg" alt="Ноутбук з відкритим сайтом компанії" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name">Технокряк</h2>
                 <p class="portfolio-type">Веб-сайт</p>
@@ -80,7 +88,13 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-2.jpg" alt="Постер баскетбольного матчу" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-2.jpg" alt="Постер баскетбольного матчу" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
                 <p class="portfolio-type">Дизайн</p>
@@ -89,7 +103,13 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-3.jpg" alt="Логотип ресторану" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-3.jpg" alt="Логотип ресторану" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name">Ресторан Seafood</h2>
                 <p class="portfolio-type">Додаток</p>
@@ -98,7 +118,13 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-4.jpg" alt="Навушники закритого типу" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-4.jpg" alt="Навушники закритого типу" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name">Проект Prime</h2>
                 <p class="portfolio-type">Маркетинг</p>
@@ -107,7 +133,13 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-5.jpg" alt="Подарункові коробки" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-5.jpg" alt="Подарункові коробки" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name">Проект Boxes</h2>
                 <p class="portfolio-type">Додаток</p>
@@ -116,7 +148,13 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-6.jpg" alt="Монітор з відкритим сайтом компанії" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-6.jpg" alt="Монітор з відкритим сайтом компанії" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name" lang="en">Inspiration has no Borders</h2>
                 <p class="portfolio-type">Веб-сайт</p>
@@ -125,7 +163,13 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-7.jpg" alt="Разворот журналу" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-7.jpg" alt="Разворот журналу" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name">Видання Limited Edition</h2>
                 <p class="portfolio-type">Дизайн</p>
@@ -134,7 +178,13 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-8.jpg" alt="Елегантна біла етикетка" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-8.jpg" alt="Елегантна біла етикетка" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name">Проект LAB</h2>
                 <p class="portfolio-type">Маркетинг</p>
@@ -143,7 +193,13 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link link" href="">
-              <img src="./img/portfolio-img-9.jpg" alt="Відкритий додаток на ноутбуці" width="370" />
+              <div class="img-box">
+                <img src="./img/portfolio-img-9.jpg" alt="Відкритий додаток на ноутбуці" width="370" />
+                <p class="portfolio-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-name">Growing Business</h2>
                 <p class="portfolio-type">Додаток</p>
@@ -185,9 +241,7 @@
           <ul class="footer-social-list list">
             <li class="footer-social-item">
               <a class="footer-social-link link" href="">
-                <svg class="social-link-ico" width="20" height="20">
-                  <use href="./img/sprite.svg#instagram"></use>
-                </svg>
+                <svg class="social-link-ico" width="20" height="20"><use href="./img/sprite.svg#instagram"></use></svg>
               </a>
             </li>
             <li class="footer-social-item">
