--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk-UA">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -145,7 +145,7 @@
                 <ul class="teammate-social-list list">
                   <li class="teammate-social-item">
                     <a class="teammate-social-link link" href="">
-                      <svg class="teammate-social-icon" width="20" height="20" width="20" height="20">
+                      <svg class="teammate-social-icon" width="20" height="20">
                         <use href="./img/sprite.svg#instagram"></use>
                       </svg>
                     </a>
