Refactoring code to SASS Changes to be committed: 	new file:   .vscode/settings.json 	new file:   SASS/base/_common.scss 	new file:   SASS/base/_reset.scss 	new file:   SASS/components/_backdrop-modal.scss 	new file:   SASS/components/_btn.scss 	new file:   SASS/components/_logo.scss 	new file:   SASS/components/_modal-form.scss 	new file:   SASS/layouts/_features-section.scss 	new file:   SASS/layouts/_footer.scss 	new file:   SASS/layouts/_header.scss 	new file:   SASS/layouts/_hero-section.scss 	new file:   SASS/layouts/_our-clients-section.scss 	new file:   SASS/layouts/_our-team-section.scss 	new file:   SASS/layouts/_portfolio-filters.scss 	new file:   SASS/layouts/_portfolio-projects.scss 	new file:   SASS/layouts/_service-section.scss 	new file:   SASS/main.scss 	new file:   SASS/portfolio.scss 	new file:   SASS/utils/_vars.scss 	new file:   SASS/utils/_visually-hidden.scss 	new file:   css/main.css 	new file:   css/main.css.map 	new file:   css/main.min.css 	new file:   css/main.min.css.map 	new file:   css/portfolio.css 	new file:   css/portfolio.css.map 	new file:   css/portfolio.min.css 	new file:   css/portfolio.min.css.map 	new file:   css/styles copy.css 	modified:   css/styles.css 	modified:   index.html 	modified:   portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
 
   <body>
@@ -66,12 +66,12 @@
       <div class="container">
         <h1 class="portfolio__heading visually-hidden">Портфоліо</h1>
         <!-- ======= PORTFOLIO FILTERS ========== -->
-        <ul class="portfolio-filter list">
-          <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Все</button></li>
-          <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Веб-сайти</button></li>
-          <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Додатки</button></li>
-          <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Дизайн</button></li>
-          <li class="portfolio-filter__item"><button class="portfolio-filter__btn" type="button">Маркетинг</button></li>
+        <ul class="portfolio__filter list">
+          <li class="portfolio__filter-item"><button class="portfolio__filter-btn" type="button">Все</button></li>
+          <li class="portfolio__filter-item"><button class="portfolio__filter-btn" type="button">Веб-сайти</button></li>
+          <li class="portfolio__filter-item"><button class="portfolio__filter-btn" type="button">Додатки</button></li>
+          <li class="portfolio__filter-item"><button class="portfolio__filter-btn" type="button">Дизайн</button></li>
+          <li class="portfolio__filter-item"><button class="portfolio__filter-btn" type="button">Маркетинг</button></li>
         </ul>
         <!-- ======= PORTFOLIO PROJECTS ========== -->
         <ul class="portfolio__list list">
