Add scroll to top and animated it Changes to be committed: 	new file:   SASS/base/_annimations.scss 	new file:   SASS/components/_scroll-to-top.scss 	modified:   SASS/main.scss 	modified:   SASS/portfolio.scss 	modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/portfolio.css 	modified:   css/portfolio.css.map 	modified:   css/portfolio.min.css 	modified:   css/portfolio.min.css.map 	modified:   img/sprite.svg 	modified:   index.html 	modified:   portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 
   <body>
     <!-- ============= HEADER ========== -->
-    <header class="page-header">
+    <header class="page-header" id="header">
       <div class="container page-header__container">
         <nav class="site-nav">
           <!-- prettier-ignore -->
@@ -286,5 +286,11 @@
         </div>
       </div>
     </footer>
+    <!--================== SCROLL TO TOP BTN ================-->
+    <a class="scroll-to-top" href="#header">
+      <svg class="scroll-to-top__icon" width="32" height="32">
+        <use href="./img/sprite.svg#arrow-up"></use>
+      </svg>
+    </a>
   </body>
 </html>
