--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!--================ HEADER ===============-->
-    <header class="page-header">
+    <header class="page-header" id="header">
       <div class="container page-header__container">
         <nav class="site-nav">
           <!-- prettier-ignore -->
@@ -458,7 +458,12 @@
         </form>
       </div>
     </div>
-
+    <!--================== SCROLL TO TOP BTN ================-->
+    <a class="scroll-to-top" href="#header">
+      <svg class="scroll-to-top__icon" width="32" height="32">
+        <use href="./img/sprite.svg#arrow-up"></use>
+      </svg>
+    </a>
     <script src="./js/modal.js"></script>
   </body>
 </html>
