Add smooth scroll to top Changes to be committed: 	modified:   SASS/components/_scroll-to-top.scss 	modified:   css/main.css 	modified:   css/main.min.css 	modified:   css/portfolio.css 	modified:   css/portfolio.min.css 	modified:   index.html 	new file:   js/scroll-top.js 	modified:   portfolio.html

--- a/index.html
+++ b/index.html
@@ -459,11 +459,12 @@
       </div>
     </div>
     <!--================== SCROLL TO TOP BTN ================-->
-    <a class="scroll-to-top" href="#header">
+    <a class="scroll-to-top" href="#header" onclick="return up()">
       <svg class="scroll-to-top__icon" width="32" height="32">
         <use href="./img/sprite.svg#arrow-up"></use>
       </svg>
     </a>
     <script src="./js/modal.js"></script>
+    <script src="./js/scroll-top.js"></script>
   </body>
 </html>
