--- a/portfolio.html
+++ b/portfolio.html
@@ -287,10 +287,11 @@
       </div>
     </footer>
     <!--================== SCROLL TO TOP BTN ================-->
-    <a class="scroll-to-top" href="#header">
+    <a class="scroll-to-top" href="#header" onclick="return up()">
       <svg class="scroll-to-top__icon" width="32" height="32">
         <use href="./img/sprite.svg#arrow-up"></use>
       </svg>
     </a>
+    <script src="./js/scroll-top.js"></script>
   </body>
 </html>
