Some BEM and SCSS editing

--- a/portfolio.html
+++ b/portfolio.html
@@ -223,7 +223,7 @@
             <ul class="footer-contacts__list list">
               <li class="footer-contacts__item">
                 <a
-                  class="footer-contacts__link address link"
+                  class="footer-contacts__link footer-contacts__link--white link"
                   href="https://goo.gl/maps/namVYLT5pjn7duQN9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -241,7 +241,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <h3 class="footer-social__heading footer__heading">приєднуйтесь</h3>
+          <h3 class="footer__heading">приєднуйтесь</h3>
           <ul class="footer-social__list list">
             <li class="footer-social__item">
               <a class="footer-social__link link" href="">
@@ -272,7 +272,7 @@
           </ul>
         </div>
         <div class="footer-form__wrap">
-          <h3 class="footer-form__heading footer__heading">Підпишіться на розсилку</h3>
+          <h3 class="footer__heading">Підпишіться на розсилку</h3>
           <form class="footer-form">
             <input type="email" class="footer-form__input" name="email" id="email" placeholder=" " />
             <label class="footer-form__label" for="email">E-mail</label>
