--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="logo link animate__animated animate__bounce" lang="en" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
           <ul class="site-nav__list list">
             <li class="site-nav__item">
-              <a class="site-nav__link link site-nav__link--current" href="./index.html">Студія</a>
+              <a class="site-nav__link site-nav__link--current link" href="./index.html">Студія</a>
             </li>
             <li class="site-nav__item"><a class="site-nav__link link" href="./portfolio.html">Портфоліо</a></li>
             <li class="site-nav__item"><a class="site-nav__link link" href="">Контакти</a></li>
@@ -58,20 +58,19 @@
         </ul>
       </div>
     </header>
-
     <main>
       <!--============ HERO SECTION ============-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero__heading">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero__btn btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <!--========== FEATURES SECTION ===========-->
-      <section class="features section">
+      <section class="section">
         <div class="container">
-          <h2 class="features__heading visually-hidden">Особливості</h2>
-          <ul class="features__list list">
+          <h2 class="section__title visually-hidden">Особливості</h2>
+          <ul class="features list">
             <li class="features__item">
               <div class="features__icon-wrap">
                 <svg class="features__icon" width="70" height="70">
@@ -114,10 +113,10 @@
         </div>
       </section>
       <!--=========== SERVICE SECTION ===========-->
-      <section class="service section">
+      <section class="section section--no-pading">
         <div class="container">
-          <h2 class="service__heading section-heading">Чим ми займаємося</h2>
-          <ul class="service__list list">
+          <h2 class="section__title">Чим ми займаємося</h2>
+          <ul class="service list">
             <li class="service__item">
               <div class="img-box">
                 <img src="./img/what-we-do-1.jpg" alt="Програмування" width="370" />
@@ -140,10 +139,10 @@
         </div>
       </section>
       <!--========== OUR TEAM SECTION ==========-->
-      <section class="team section">
+      <section class="section section--alt-bg">
         <div class="container">
-          <h2 class="team__heading section-heading">Наша команда</h2>
-          <ul class="team__list list">
+          <h2 class="section__title">Наша команда</h2>
+          <ul class="team list">
             <li class="team__item">
               <img src="./img/teammate1.jpg" alt="Фото Игоря Дем'яненка" width="270" />
               <div class="team__content">
@@ -296,10 +295,10 @@
         </div>
       </section>
       <!--========== OUR CLIENTS SECTION ==========-->
-      <section class="clients section">
+      <section class="section">
         <div class="container">
-          <h2 class="clients__heading section-heading">Постійні клієнти</h2>
-          <ul class="clients__list list">
+          <h2 class="section__title">Постійні клієнти</h2>
+          <ul class="clients list">
             <li class="clients__item">
               <a href="" class="clients__link link">
                 <svg class="clients__icon" width="106" height="60"><use href="./img/sprite.svg#Logo1"></use></svg>
@@ -344,7 +343,7 @@
             <ul class="footer-contacts__list list">
               <li class="footer-contacts__item">
                 <a
-                  class="footer-contacts__link address link"
+                  class="footer-contacts__link footer-contacts__link--white link"
                   href="https://goo.gl/maps/namVYLT5pjn7duQN9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -362,7 +361,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <h3 class="footer-social__heading footer__heading">приєднуйтесь</h3>
+          <h3 class="footer__heading">приєднуйтесь</h3>
           <ul class="footer-social__list list">
             <li class="footer-social__item">
               <a class="footer-social__link link" href="">
@@ -393,7 +392,7 @@
           </ul>
         </div>
         <div class="footer-form__wrap">
-          <h3 class="footer-form__heading footer__heading">Підпишіться на розсилку</h3>
+          <h3 class="footer__heading">Підпишіться на розсилку</h3>
           <form class="footer-form">
             <input type="email" class="footer-form__input" name="email" id="email" placeholder=" " />
             <label class="footer-form__label" for="email">E-mail</label>
